--- a/components/Text/edit/body.html
+++ b/components/Text/edit/body.html
@@ -1,4 +1,4 @@
 <span ng-controller="PCMSComponentController">
     <component-editor-buttons component-id="[[= component.id ]]"></component-editor-buttons>
-    <p class="component-edit-border" >[[= component.data.text ]]</p>
+    <span class="component-edit-border [[=component.data.classes]]">[[= component.data.text ]]</span>
 </span>
